<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:a="http://schemas.android.com/apk/res/android"
    xmlns:t="http://schemas.android.com/tools"
    a:layout_width="match_parent"
    a:layout_height="match_parent"
    t:context=".add_company"
    a:orientation="vertical"
    >
    <TextView
        a:id="@+id/register_head"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:gravity="center"
        a:text="@string/register_head"
        a:textAlignment="center"
        a:textSize="34sp"
        a:layout_marginTop="120dp"
        />

    <EditText
        a:id="@+id/login_edit_text"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:layout_marginHorizontal="10dp"
        a:layout_marginTop="50dp"
        a:gravity="center"
        a:hint="@string/login_hint"
        a:inputType="none"
        a:minHeight="48dp"
        a:padding="5dp"
        a:text=""
        a:textSize="24sp"
        a:importantForAutofill="no"
        />



    <EditText
        a:id="@+id/email_edit_text"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:layout_marginHorizontal="10dp"
        a:gravity="center"
        a:hint="@string/email_hint"
        a:inputType="textEmailAddress"
        a:minHeight="48dp"
        a:padding="5dp"
        a:text=""
        a:textSize="24sp"
        a:importantForAutofill="no"
        />


    <EditText
        a:id="@+id/password_edit_text"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:layout_marginHorizontal="10dp"
        a:gravity="center"
        a:hint="@string/password_hint"
        a:inputType="textPassword"
        a:minHeight="48dp"
        a:padding="5dp"
        a:text=""
        a:textSize="24sp"
        a:importantForAutofill="no"
        />


    <LinearLayout
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:orientation="horizontal"
        a:weightSum="2"
        a:layout_marginTop="50dp">

    <Button
        a:id="@+id/confirm_button"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:gravity="center"
        a:text="@string/application"
        a:textSize="15dp"
        a:layout_gravity="center_horizontal"
        a:layout_weight="1"
        a:layout_margin="10dp"
        />

    <Button
        a:id="@+id/drop_button"
        a:textSize="15dp"
        a:gravity="center"
        a:layout_gravity="center_horizontal"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:text="@string/clear"
        a:layout_marginTop="10dp"
        a:layout_weight="1"
        a:layout_margin="10dp"
        />
    </LinearLayout>

</LinearLayout>