<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:a="http://schemas.android.com/apk/res/android"
    xmlns:t="http://schemas.android.com/tools"
    a:layout_width="match_parent"
    a:layout_height="match_parent"
    t:context=".add_company"
    a:orientation="vertical"
    >
    <TextView
        a:layout_marginTop="120dp"
        a:id="@+id/login_head"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:gravity="center"
        a:text="@string/login"
        a:textAlignment="center"
        a:textSize="34sp"

        />

    <EditText
        a:id="@+id/login_edit_text"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:layout_marginHorizontal="10dp"
        a:gravity="center"
        a:hint="@string/login_hint"
        a:inputType="none"
        a:minHeight="48dp"
        a:padding="5dp"
        a:text=""
        a:textSize="24sp"
        a:importantForAutofill="no"
        a:layout_marginTop="50dp"/>



    <EditText
        a:id="@+id/password_edit_text"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:gravity="center"
        a:hint="@string/password_hint"
        a:inputType="textPassword"
        a:minHeight="48dp"
        a:padding="5dp"
        a:text=""
        a:textSize="24sp"
        a:importantForAutofill="no"
        a:layout_marginHorizontal="10dp"
        />


<LinearLayout
    a:layout_width="match_parent"
    a:layout_height="wrap_content"
    a:orientation="horizontal"
    a:weightSum="2"
    a:layout_marginTop="50dp">


    <Button
        a:id="@+id/login_button"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:gravity="center"
        a:text="@string/login_button"
        a:textSize="17dp"
        a:layout_gravity="center_horizontal"
        a:layout_marginTop="50dp"
        a:layout_weight="1"
        a:layout_margin="10dp"
        />

    <Button
        a:id="@+id/registration_button"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:gravity="center"
        a:text="@string/registration_button"
        a:textSize="17dp"
        a:layout_gravity="center_horizontal"
        a:layout_weight="1"
        a:layout_margin="10dp"
        />

</LinearLayout>

</LinearLayout>